--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.datasource.url=jdbc:h2:file:./data/myDB
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=breedr
-spring.datasource.password=fjkls-fsssl-fwfw78
+spring.datasource.password=ENC(V845n3OQy8dDUUxpqGjGBiP1cJCy0sOn0x/v34FragU=)
 spring.jpa.hibernate.ddl-auto=update
+
+#### Jwt secret ####
+jwt.secret=ENC(l90qYRt9Jp25enlN9D7GWcXg3LETs6jN4h5AzgbEC5Y=)
+
+#### jasypt ####
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
